loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:16: error: not found: value avane
avane()
^